--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <!-- Top Bar -->
   <div class="top-bar">
-    <span>HEAL Wellness • Evidence-based peptides, GLP-1s & medicinal skincare</span>
+    <span>HEAL Wellness • Led by Dr. Gunjan Raina, MD &amp; Jude Marino</span>
   </div>
 
   <!-- Header / Nav -->
@@ -26,13 +26,13 @@
       </a>
       <nav class="nav">
         <a href="#about">About</a>
+        <a href="#team">Our Team</a>
         <a href="#peptides">Peptides</a>
         <a href="#glp1">GLP-1 Programs</a>
         <a href="#creams">Face Creams</a>
         <a href="questionnaire.html">Estriol Questionnaire</a>
         <a href="#contact">Contact</a>
       </nav>
-      <a href="#contact" class="btn btn-outline">Book a Consultation</a>
     </div>
   </header>
 
@@ -40,34 +40,29 @@
   <section class="hero">
     <div class="container hero-inner">
       <div class="hero-copy">
-        <p class="eyebrow">Precision Wellness • Modern Medicine</p>
-        <h1>Peptides, GLP-1s & medicinal face creams designed to help you feel—and look—your best.</h1>
+        <p class="eyebrow">Modern medicine • Elevated aesthetics</p>
+        <h1>Peptides, GLP-1s & medicinal face creams in a calm, concierge setting.</h1>
         <p class="hero-text">
-          At <strong>HEAL Wellness</strong>, we blend science, safety, and sophistication. From
-          targeted peptide protocols to GLP-1 weight-management programs and estriol-based
-          face creams, every treatment is physician-guided and personalized.
+          HEAL Wellness, led by <strong>Dr. Gunjan Raina, MD</strong> and
+          <strong>Jude Marino</strong>, combines evidence-based therapies with a
+          soothing, boutique experience. From peptide protocols and GLP-1 programs to
+          estriol-based face creams, every plan is personalized and medically supervised.
         </p>
         <div class="hero-actions">
           <a href="#creams" class="btn btn-primary">Explore Face Creams</a>
-          <a href="#peptides" class="btn btn-ghost">View Peptide Menu</a>
+          <a href="#peptides" class="btn btn-ghost">View Peptide Options</a>
         </div>
         <p class="hero-note">
-          Serving patients through a concierge-style model with virtual and in-clinic care options.
+          New patients begin with a consultation and medical review before any prescriptions are written.
         </p>
       </div>
-      <div class="hero-card">
-        <div class="hero-card-inner">
-          <h2>Start your HEAL journey</h2>
-          <p>Answer a few questions and our team will review your profile to recommend safe, effective therapies.</p>
-          <ul class="hero-list">
-            <li>Board-supervised treatment plans</li>
-            <li>Personalized peptide & GLP-1 protocols</li>
-            <li>Medical-grade estriol face creams</li>
-          </ul>
-          <a href="questionnaire.html" class="btn btn-primary btn-full">Begin Estriol Questionnaire</a>
-          <p class="hero-disclaimer">
-            HEAL Wellness is not emergency care. All treatments require provider review and medical clearance.
-          </p>
+
+      <!-- Big, clean hero image similar in feel to Modern Belle -->
+      <div class="hero-media">
+        <div class="hero-photo-frame">
+          <img src="images/hero-heal.jpg"
+               alt="Relaxing wellness studio at HEAL Wellness"
+               class="hero-photo">
         </div>
       </div>
     </div>
@@ -79,51 +74,97 @@
       <div>
         <h2>About HEAL Wellness</h2>
         <p>
-          HEAL Wellness was created to bring together the very best of modern medicine:
-          <strong>clinical peptides, GLP-1s, and medicinal skincare</strong>—all under one
-          sophisticated, concierge-style experience.
+          HEAL Wellness was created to bring together <strong>clinical peptides, GLP-1s,
+          and medicinal skincare</strong> in one refined, welcoming space. Our focus is
+          modern therapies delivered with old-school bedside manner.
         </p>
         <p>
-          Our team focuses on whole-person health: how you sleep, move, age, and feel in your
-          own skin. Every protocol is thoughtfully designed and medically reviewed with your
-          safety as the first priority.
+          We care about how you sleep, move, age, and feel in your own skin. Under the
+          guidance of Dr. Raina and Jude, our team designs thoughtful, medically sound
+          protocols that honor both your health and your aesthetic goals.
         </p>
       </div>
       <div class="feature-box">
-        <h3>Why patients choose HEAL</h3>
+        <h3>What makes HEAL different</h3>
         <ul>
-          <li>Evidence-based formulations and dosing</li>
-          <li>Concierge-style access and follow-up</li>
-          <li>Customized combinations for healing, repair, and radiance</li>
-          <li>Discreet, professional, and warm environment</li>
+          <li>Physician-led clinical oversight</li>
+          <li>Concierge-style appointments and follow-up</li>
+          <li>Targeted peptides and GLP-1s, not one-size-fits-all plans</li>
+          <li>Medicinal skincare with elegant, everyday use in mind</li>
         </ul>
       </div>
     </div>
   </section>
 
+  <!-- Team -->
+  <section id="team" class="section">
+    <div class="container">
+      <h2 class="section-title">Meet your care team</h2>
+      <p class="section-intro">
+        HEAL Wellness is guided by a collaborative partnership between a board-certified
+        physician and a peptide integration specialist, aligning medical safety with real-world
+        wellness experience.
+      </p>
+
+      <div class="team-grid">
+        <article class="provider-card">
+          <div class="provider-photo-frame">
+            <img src="images/dr-gunjan-raina.jpg"
+                 alt="Dr. Gunjan Raina, MD"
+                 class="provider-photo">
+          </div>
+          <h3>Dr. Gunjan Raina, MD</h3>
+          <p class="provider-role">Medical Director, HEAL Wellness</p>
+          <p>
+            Dr. Raina oversees all clinical protocols at HEAL Wellness, including peptide,
+            GLP-1, and estriol-based skincare therapies. She reviews your history, labs, and
+            questionnaire responses to ensure each plan is safe, appropriate, and aligned
+            with current medical standards.
+          </p>
+        </article>
+
+        <article class="provider-card">
+          <div class="provider-photo-frame">
+            <img src="images/jude-marino.jpg"
+                 alt="Jude Marino"
+                 class="provider-photo">
+          </div>
+          <h3>Jude Marino</h3>
+          <p class="provider-role">Certified Peptide Integration Specialist</p>
+          <p>
+            Jude partners with Dr. Raina to translate clinical protocols into day-to-day
+            wellness plans. He helps patients understand each therapy, supports lifestyle
+            changes, and ensures that your experience feels calm, organized, and truly
+            concierge.
+          </p>
+        </article>
+      </div>
+    </div>
+  </section>
+
   <!-- Peptides -->
-  <section id="peptides" class="section">
+  <section id="peptides" class="section section-soft">
     <div class="container">
       <h2 class="section-title">Targeted peptide therapies</h2>
       <p class="section-intro">
         Peptides are short chains of amino acids that can support healing, recovery,
-        performance, and longevity when used responsibly under medical supervision.
+        performance, and healthy aging when used responsibly under medical supervision.
       </p>
       <div class="card-grid">
         <article class="card">
           <h3>BPC-157</h3>
           <p class="card-tagline">Healing • Inflammation • Gut repair</p>
           <p>
-            Often used to support soft-tissue healing and gut integrity, BPC-157 may be
-            considered for patients focused on recovery and chronic inflammation.
+            Considered for patients focused on recovery and gut support, BPC-157 may be
+            incorporated into protocols aimed at soft-tissue repair and inflammation.
           </p>
         </article>
         <article class="card">
           <h3>TB-500</h3>
           <p class="card-tagline">Recovery • Flexibility • Tissue repair</p>
           <p>
-            A synthetic fragment of thymosin beta-4 that can be incorporated into protocols
-            aimed at musculoskeletal recovery and mobility goals.
+            A thymosin beta-4 derivative that may be used to support mobility, flexibility,
+            and overall musculoskeletal recovery under physician guidance.
           </p>
         </article>
         <article class="card">
@@ -131,28 +172,29 @@
           <p class="card-tagline">Anti-aging • Skin health • Hair support</p>
           <p>
             Frequently used in topical and injectable forms, this copper peptide is known
-            for supporting collagen, skin firmness, and scalp health.
+            for supporting collagen, firmness, and scalp health.
           </p>
         </article>
         <article class="card">
-          <h3>Glow & Wolverine Blends</h3>
+          <h3>Glow &amp; Wolverine Blends</h3>
           <p class="card-tagline">Synergistic repair & radiance</p>
           <p>
-            Proprietary blends such as Glow and Wolverine combine targeted peptides to
-            support global tissue repair, recovery, and aesthetic results.
+            HEAL signature blends designed to support global tissue repair, resilience, and
+            aesthetic outcomes when clinically appropriate.
           </p>
         </article>
         <article class="card">
           <h3>NAD+</h3>
           <p class="card-tagline">Energy • Focus • Cellular support</p>
           <p>
-            NAD+–focused protocols may be used to support mitochondrial function, mental
-            clarity, and healthy aging, always under clinical review.
+            NAD+-focused protocols may be used to support mitochondrial health, mental
+            clarity, and overall vitality, with close clinical monitoring.
           </p>
         </article>
       </div>
       <p class="section-footnote">
-        Peptides are prescribed only after a complete clinical evaluation. Individual results may vary.
+        Peptides are prescribed only after a complete clinical evaluation by our team.
+        Individual results may vary; no outcome is guaranteed.
       </p>
     </div>
   </section>
@@ -163,23 +205,23 @@
       <div>
         <h2>GLP-1 weight-management programs</h2>
         <p>
-          Our GLP-1 programs are designed for patients who qualify based on medical history,
-          lab work, and body-composition goals. We pair medication with lifestyle coaching
-          to support sustainable change.
+          Our GLP-1 programs are reserved for patients who qualify based on medical history,
+          labs, and body-composition goals. Dr. Raina and Jude pair medication with realistic
+          lifestyle support to help you build sustainable change.
         </p>
         <ul class="checklist">
           <li>Comprehensive intake and lab review</li>
-          <li>Personalized dosing strategy</li>
-          <li>Ongoing follow-up with your care team</li>
+          <li>Individualized GLP-1 dosing strategies</li>
+          <li>Ongoing check-ins and side-effect monitoring</li>
           <li>Guidance on nutrition, movement, and habits</li>
         </ul>
       </div>
       <div class="accent-box">
         <h3>Is GLP-1 right for you?</h3>
         <p>
-          GLP-1 medications are not appropriate for everyone. Our providers carefully screen
-          for contraindications such as certain thyroid tumors, pancreatitis history, and
-          other medical conditions before prescribing.
+          GLP-1 medications are not appropriate for everyone. Our team screens for
+          contraindications such as certain thyroid tumors, pancreatitis history, and
+          medication interactions before prescribing.
         </p>
         <a href="#contact" class="btn btn-light">Schedule a GLP-1 consult</a>
       </div>
@@ -192,28 +234,27 @@
       <div>
         <h2>Medicinal estriol face cream</h2>
         <p>
-          HEAL’s signature face cream features <strong>estriol</strong>, a gentle estrogen
-          that can support smoother, more luminous skin when used appropriately and under
-          medical supervision.
+          HEAL’s signature face cream features <strong>estriol</strong> in a luxurious base
+          designed for daily use. Patients love the way it supports smoother, more hydrated
+          skin when used consistently and under medical supervision.
         </p>
         <p>
-          Because estriol is a hormone, we require patients to complete a brief safety
-          questionnaire and provider review prior to prescribing. This ensures there are no
-          contraindications or potential medication conflicts.
+          Because estriol is a hormone, every patient completes a brief safety
+          questionnaire and receives a provider review before the cream is prescribed.
         </p>
         <a href="questionnaire.html" class="btn btn-primary">Complete Estriol Questionnaire</a>
       </div>
       <div class="feature-box">
-        <h3>Key benefits our patients love</h3>
+        <h3>Patient-loved benefits</h3>
         <ul>
-          <li>Silkier, more hydrated skin texture</li>
+          <li>Silky, more hydrated texture</li>
           <li>Support for fine lines and tone</li>
-          <li>Thoughtfully dosed estriol in a luxurious base</li>
-          <li>Customized regimens for face, neck, and décolletage</li>
+          <li>Thoughtful estriol dosing in a refined, elegant formula</li>
+          <li>Plans customized to your skin and hormone history</li>
         </ul>
         <p class="small">
-          Results vary and are not guaranteed. All hormone-based products require medical
-          clearance and ongoing monitoring.
+          All hormone-based products are prescribed and monitored by our medical team. Results
+          and experiences vary.
         </p>
       </div>
     </div>
@@ -228,28 +269,32 @@
           <span class="step-number">01</span>
           <h3>Consultation</h3>
           <p>
-            Share your story, goals, and medical history with our team in-person or via secure telehealth.
+            Meet with Dr. Raina or a member of our team, in-person or via secure telehealth,
+            to discuss your goals and history.
           </p>
         </div>
         <div class="step">
           <span class="step-number">02</span>
           <h3>Clinical review</h3>
           <p>
-            Your provider reviews labs, medications, and questionnaires—especially for estriol and GLP-1 therapies.
+            Your labs, medications, and questionnaires—especially for estriol and GLP-1
+            therapies—are reviewed for safety and eligibility.
           </p>
         </div>
         <div class="step">
           <span class="step-number">03</span>
           <h3>Personalized plan</h3>
           <p>
-            We design a tailored protocol that may include peptides, GLP-1s, and medicinal skincare when medically appropriate.
+            Dr. Raina and Jude collaborate on a custom plan that may include peptides,
+            GLP-1s, and medicinal skincare if appropriate.
           </p>
         </div>
         <div class="step">
           <span class="step-number">04</span>
           <h3>Ongoing support</h3>
           <p>
-            Follow-up, dose adjustments, and long-term support to help you feel confident in your treatment plan.
+            We adjust as needed, monitor your response, and support you along the way so
+            your plan fits real life.
           </p>
         </div>
       </div>
@@ -257,13 +302,13 @@
   </section>
 
   <!-- Contact / CTA -->
-  <section id="contact" class="section section-accent">
+  <section id="contact" class="section section-soft">
     <div class="container split">
       <div>
         <h2>Ready to explore what’s possible with HEAL?</h2>
         <p>
           Share a few details and a member of our team will reach out to schedule your
-          consultation and answer any questions about peptides, GLP-1s, or our estriol face creams.
+          consultation and answer questions about peptides, GLP-1s, or our estriol face cream.
         </p>
       </div>
       <form class="contact-form">
@@ -296,8 +341,8 @@
           <label for="message">Anything else you’d like us to know?</label>
           <textarea id="message" name="message" rows="3"></textarea>
         </div>
-        <!-- Replace action with your Formspree or backend endpoint -->
-        <button type="submit" class="btn btn-light btn-full">Submit</button>
+        <!-- Add your real backend / Formspree endpoint when ready -->
+        <button type="submit" class="btn btn-primary btn-full">Submit</button>
         <p class="small">
           By submitting, you agree to be contacted by HEAL Wellness. This form does not
           establish a patient-provider relationship or provide medical advice.
@@ -313,17 +358,17 @@
         <p class="footer-brand">HEAL Wellness</p>
         <p class="small">
           Peptides • GLP-1s • Medicinal Skincare<br>
-          All treatments subject to medical evaluation and eligibility.
+          Led by Dr. Gunjan Raina, MD &amp; Jude Marino.
         </p>
       </div>
       <div class="footer-links">
         <a href="#about">About</a>
+        <a href="#team">Our Team</a>
         <a href="#peptides">Peptides</a>
         <a href="#glp1">GLP-1s</a>
         <a href="#creams">Face Creams</a>
         <a href="questionnaire.html">Estriol Questionnaire</a>
-        <!-- Add Privacy Policy link when you’re ready -->
-        <!-- <a href="privacy.html">Privacy & HIPAA</a> -->
+        <a href="privacy.html">Privacy &amp; HIPAA</a>
       </div>
       <p class="small footer-note">© <span id="year"></span> HEAL Wellness. All rights reserved.</p>
     </div>
